# testable-rust-architecture-template

./: .env.example  Cargo.toml  LICENSE  README.md  README_REFACTORED.md  docker-compose.yml  project_dump.txt  requests.http
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
benches/: domain_benchmarks.rs
migrations/: 20240101000000_create_items_table.sql  20260205000000_create_solana_outbox_table.sql  20260212000000_decouple_outbox.sql  20260212100000_add_performance_indexes.sql  20260212120000_add_attempt_blockhash.sql  20260215000000_add_solana_outbox_updated_at.sql
src/: lib.rs  main.rs
src/api/: handlers.rs  middleware.rs  mod.rs  router.rs
src/app/: mod.rs  service.rs  state.rs  worker.rs
src/domain/: error.rs  mod.rs  traits.rs  types.rs
src/infra/: mod.rs  observability.rs
src/infra/blockchain/: mod.rs  signer.rs  solana.rs
src/infra/database/: mod.rs  postgres.rs
src/test_utils/: mocks.rs  mod.rs
tests/: api_requests.rs  database_integration.rs  integration_test.rs
