[package]
name = "testable-rust-architecture-template"
version = "0.2.0"
edition = "2024"
description = "A production-ready Rust template demonstrating testable architecture through trait-based abstraction and dependency injection"
license = "MIT"
repository = "https://github.com/Berektassuly/testable-rust-architecture-template"
readme = "README.md"
keywords = ["rust", "architecture", "testing", "dependency-injection"]
categories = ["development-tools", "web-programming"]

[dependencies]
# Web framework
axum = "0.8"

# Async runtime
tokio = { version = "1.48", features = ["full", "signal"] }

# Database - using rustls to avoid OpenSSL dependency
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Environment configuration
dotenvy = "0.15"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP client for blockchain RPC calls (using rustls to avoid OpenSSL)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# HTTP utilities and middleware
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "limit"] }

# Rate limiting
governor = "0.8"
tower_governor = "0.5"

# Base58 encoding for blockchain addresses/keys
bs58 = "0.5"

# Cryptographic signatures (ed25519 for Solana-compatible signing)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# SHA256 hashing
sha2 = "0.10"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Secret management
secrecy = { version = "0.10", features = ["serde"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics (optional but recommended)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
# Testing utilities
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio-test = "0.4"

[lib]
name = "testable_rust_architecture_template"
path = "src/lib.rs"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true

[profile.release]
# Optimized for production
opt-level = 3
lto = "thin"
codegen-units = 1
